# edu-pi

./: .gitignore  AGENTS.md  IDEAS.md  ISSUES.md  README.md  REQUIREMENTS.md  compile_translations.py  db.sqlite3  edu-pi.service  install-raspberry-pi.sh  main.py  mkdocs.yml  pyproject.toml  tinko-update.service  uninstall.sh  update-web.sh  update.sh
.claude/: settings.local.json
config/: asgi.py  settings.py  urls.py
core/: __init__.py
core/edupi_core/: apps.py  context_processors.py  urls.py  views.py
core/edupi_core/templatetags/: edupi_tags.py
core/plugin_system/: __init__.py  admin.py  apps.py  base.py  models.py  settings.py  settings_forms.py  urls.py  views.py
core/plugin_system/migrations/: 0001_initial.py  0002_sitesetting.py
core/plugin_system/templatetags/: plugin_extras.py
core/update_system/: consumers.py  models.py  routing.py  update_daemon.py  urls.py  views.py
core/update_system/migrations/: 0001_initial.py
developer/hardware/requirements/: index.html
developer/plugins/api/: index.html
developer/plugins/best-practices/: index.html
developer/plugins/tutorial/: index.html
developer/setup/: index.html
developer/structure/: index.html
developer/testing/: index.html
docs/: PLUGIN_DEVELOPMENT.md  index.md
docs/developer/: contributing.md  setup.md  structure.md  testing.md  translations.md  websocket.md
docs/developer/hardware/: gpio-pins.md  requirements.md  wiring.md
docs/developer/plugins/: api.md  best-practices.md  tutorial.md
docs/reference/: api.md  configuration.md  troubleshooting.md
docs/teacher/: background-activities.md  dashboard.md  first-steps.md  installation.md  overview.md  settings.md
docs/teacher/plugins/: activity-timer.md  routines.md  (+3 more)
logs/: .gitignore
scripts/: compile_translations.py
search/: search_index.json
site/: 404.html  index.html
site/search/: search_index.json
static/js/: update.js
teacher/background-activities/: index.html
teacher/first-steps/: index.html
teacher/settings/: index.html
templates/: base.html  home.html
templates/admin/: index.html  plugin_dashboard.html
templates/settings/: settings_page.html  updates_tab.html
wifi-connect/: docs.md  portal.py  startup_check.sh  wifi_worker.sh
(+108 files in other folders)
