[project]
name = "edu-pi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2,<5.0",
    "gpiozero>=2.0",
    "polib>=1.2.0",
    "pygame>=2.6.1",
    "channels>=4.0.0",
    "daphne>=4.0.0",
    "pyttsx3>=2.90",
    "edge-tts>=6.1.0",
    "gTTS>=2.5.0",
]

[project.optional-dependencies]
# Raspberry Pi GPIO libraries - install on actual Pi
# RPi.GPIO>=0.7.1
# lgpio>=0.2
pi = [
    "RPi.GPIO>=0.7.1",
    "lgpio>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "config.settings"
django_find_project = false
