[project]
name = "edu-pi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2,<5.0",
    "gpiozero>=2.0",
    "polib>=1.2.0",
    "pygame>=2.6.1",
    "channels>=4.0.0",
    "daphne>=4.0.0",
    "pyttsx3>=2.90",
    "edge-tts>=6.1.0",
    "gTTS>=2.5.0",
    "pillow>=10.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "whitenoise>=6.7.0",
    "python-dotenv>=1.0.0",
    "adafruit-circuitpython-rgb-display>=3.10.0",
    "adafruit-blinka>=8.20.0",
    "flask>=3.1.3",
]

[project.optional-dependencies]
# Raspberry Pi GPIO libraries - install on actual Pi
# RPi.GPIO>=0.7.1
# lgpio>=0.2
pi = [
    "RPi.GPIO>=0.7.1",
    "lgpio>=0.2",
    "spidev>=3.5",
    "luma.core>=2.4.0",
    "luma.lcd>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "config.settings"
django_find_project = false
